[tool.poetry]
name = "Parsing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
requests = "^2.27.1"
bs4 = "^0.0.1"
lxml = "^4.7.1"
beautifulsoup4 = "^4.10.0"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
